tests/pass/object_property_basic.lum
person = { name: "sam" }
__emit(person.name, true, false)
