tests/fail/object_property_missing_key.lum
person = { name: "sam" }
__emit(person.age, true, false)
